[package]
name = "fromsoft-file-dumper"
version = "0.1.0"
edition = "2021"

[lib]
name = "file_dumper"
crate-type = ["cdylib"]


[features]
Console = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fisherman = { git = "https://github.com/Nordgaren/fisherman" }
fisherman = { path = "../fisherman" }
windows = {version="0.48.0", features=["Win32_System_SystemInformation",  "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_SystemServices", "Win32_System_Console", "Win32_System_Threading"]}
paste = "1.0.12"
widestring = "1.0.2"
log-panics = { version = "2", features = ["with-backtrace"] }
log = "0.4"
log4rs = "1"
regex = "1.9.1"
lazy_static = {path = "lazy-static.rs"}